[package]
name = "monitor-browser"
version = "1.0.0"
description = "Monitor Browser — the browser built for intelligence analysts."
authors = ["OSINT Worldview"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "monitor_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
thiserror = "1.0"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
